refactor: create header and hero section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,38 @@
     <div class="wrapper">
         <header class="container">
             <nav>
+                <a aria-label="Logo" href="#" class="btn">
+                    <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M0 23.5092V4.97555C1.47706 3.13107 3.16344 1.46063 5.02325 0V9.41071C9.41355 3.76467 16.2812 0.130685 24 0.130685C37.2548 0.130685 48 10.8468 48 24.0658C48 37.2151 37.3677 47.8879 24.2093 48V42.99C34.5934 42.8781 42.9767 34.4483 42.9767 24.0657C42.9767 13.6135 34.4806 5.1403 24 5.1403C13.5194 5.1403 5.02326 13.6135 5.02326 24.0657V24.0658H0C2.1352e-07 23.8797 0.00212811 23.6942 0.00636074 23.5092H0ZM36.2791 24.0657C36.2791 30.8289 30.7815 36.3116 24 36.3116C21.2856 36.3116 18.777 35.4332 16.7442 33.946V41.5584C14.9064 40.7745 13.2142 39.7017 11.7209 38.395V24.0658V24.0657C11.7209 17.3025 17.2185 11.8199 24 11.8199C30.7815 11.8199 36.2791 17.3025 36.2791 24.0657ZM31.2558 24.0657C31.2558 20.0692 28.0073 16.8295 24 16.8295C19.9927 16.8295 16.7442 20.0692 16.7442 24.0657C16.7442 28.0621 19.9927 31.3019 24 31.3019C28.0073 31.3019 31.2558 28.0621 31.2558 24.0657Z" />
+                    </svg>
+                </a>
+
+                <a aria-label="Menu Icon" href="#" class="btn btn-icon mobile-only">&#9776;</a>
+                <div class="desktop-only menu-items">
+                    <a aria-label="Sobre" href="#about" class="btn">Sobre</a>
+                    <a aria-label="LinkedIn" href="https://www.linkedin.com/in/rpradosilva/" class="btn">LinkedIn</a>
+                </div>
+            </nav>
+        </header>
+        <main class="container">
+            <section class="hero">
+                <div>
+                    <span>RAFAEL PRADO</span>
+                    <h1>
+                        <span>Construo experiências eficazes</span> para produtos complexos
+                    </h1>
+                    <p>Senior Product Designer na Vivo (Telefônica Brasil)</p>
+                </div>
+                <a href="#cases" class="btn btn-icon arrow">
+                    <div>↓</div>
+                </a>
+            </section>
+            <section>xx</section>
+        </main>
+    </div>
+    <!-- <header class="container">
+            <nav>
                 <a href="#" title="RPrado Design Logo">
                     <img src="assets/logo.svg" alt="RPrado Design Logo">
                 </a>
@@ -69,24 +101,23 @@
                         <a href="#" title="Button Case">Detalhes do produto</a>
                     </div>
                 </article>
-
+                
             </section>
         </main>
         <footer class="container">
             <a href="#" title="RPrado Design Logo">
                 <svg viewBox="0 0 40 40">
                     <path
-                        d="M0 19.591V4.14629C1.23088 2.60922 2.6362 1.21718 4.18605 -7.62939e-06V7.84225C7.84463 3.13722 13.5677 0.108897 20 0.108897C31.0457 0.108897 40 9.03899 40 20.0548C40 31.0126 31.1398 39.9066 20.1744 40V35.825C28.8279 35.7318 35.814 28.7069 35.814 20.0548C35.814 11.3446 28.7338 4.28358 20 4.28358C11.2662 4.28358 4.18605 11.3446 4.18605 20.0548V20.0548L0 20.0548C1.8443e-07 19.8998 0.00177343 19.7452 0.00530061 19.591H0ZM30.2326 20.0548C30.2326 25.6908 25.6513 30.2597 20 30.2597C17.738 30.2597 15.6475 29.5277 13.9535 28.2883V34.632C12.422 33.9787 11.0119 33.0848 9.76746 31.9959V20.0548V20.0548C9.76746 14.4188 14.3487 9.84988 20 9.84988C25.6513 9.84988 30.2326 14.4188 30.2326 20.0548ZM26.0465 20.0547C26.0465 16.7244 23.3394 14.0246 20 14.0246C16.6606 14.0246 13.9535 16.7244 13.9535 20.0547C13.9535 23.3851 16.6606 26.0849 20 26.0849C23.3394 26.0849 26.0465 23.3851 26.0465 20.0547Z" />
+                    d="M0 19.591V4.14629C1.23088 2.60922 2.6362 1.21718 4.18605 -7.62939e-06V7.84225C7.84463 3.13722 13.5677 0.108897 20 0.108897C31.0457 0.108897 40 9.03899 40 20.0548C40 31.0126 31.1398 39.9066 20.1744 40V35.825C28.8279 35.7318 35.814 28.7069 35.814 20.0548C35.814 11.3446 28.7338 4.28358 20 4.28358C11.2662 4.28358 4.18605 11.3446 4.18605 20.0548V20.0548L0 20.0548C1.8443e-07 19.8998 0.00177343 19.7452 0.00530061 19.591H0ZM30.2326 20.0548C30.2326 25.6908 25.6513 30.2597 20 30.2597C17.738 30.2597 15.6475 29.5277 13.9535 28.2883V34.632C12.422 33.9787 11.0119 33.0848 9.76746 31.9959V20.0548V20.0548C9.76746 14.4188 14.3487 9.84988 20 9.84988C25.6513 9.84988 30.2326 14.4188 30.2326 20.0548ZM26.0465 20.0547C26.0465 16.7244 23.3394 14.0246 20 14.0246C16.6606 14.0246 13.9535 16.7244 13.9535 20.0547C13.9535 23.3851 16.6606 26.0849 20 26.0849C23.3394 26.0849 26.0465 23.3851 26.0465 20.0547Z" />
                 </svg>
             </a>
             <p>CONTACT</p>
             <nav>
                 <a rel="noopener" href="https://www.linkedin.com/in/rpradosilva/" target="_blank"
-                    title="LinkedIn">LinkedIn</a>
+                title="LinkedIn">LinkedIn</a>
                 <a rel="noopener" href="https://github.com/rpradosilva" target="_blank" title="Github">Github</a>
             </nav>
-        </footer>
-    </div>
+        </footer> -->
 </body>
 
 </html>
