refactor: update hero section

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <header class="container">
+    <main class="wrapper">
+        <section id="hero" class="container">
             <nav>
                 <a aria-label="Logo" href="#" class="btn">
                     <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -21,28 +21,31 @@
                 </a>
 
                 <a aria-label="Menu Icon" href="#" class="btn btn-icon mobile-only">&#9776;</a>
-                <div class="desktop-only menu-items">
+                <div class="desktop-only">
                     <a aria-label="Sobre" href="#about" class="btn">Sobre</a>
                     <a aria-label="LinkedIn" href="https://www.linkedin.com/in/rpradosilva/" class="btn">LinkedIn</a>
                 </div>
             </nav>
-        </header>
-        <main class="container">
-            <section class="hero">
-                <div>
-                    <span>RAFAEL PRADO</span>
-                    <h1>
-                        <span>Construo experiências eficazes</span> para produtos complexos
-                    </h1>
-                    <p>Senior Product Designer na Vivo (Telefônica Brasil)</p>
-                </div>
-                <a href="#cases" class="btn btn-icon arrow">
-                    <div>↓</div>
-                </a>
-            </section>
-            <section>xx</section>
-        </main>
-    </div>
+            <div>
+                <span>RAFAEL PRADO</span>
+                <h1>
+                    <span>Construo experiências eficazes</span>
+                    <br>para produtos complexos
+                </h1>
+                <p>Senior Product Designer na Vivo (Telefônica Brasil)</p>
+            </div>
+            <a href="#cases" class="btn btn-icon arrow">
+                <div>↓</div>
+            </a>
+        </section>
+        <section>xx</section>
+        <section>xx</section>
+        <section>xx</section>
+        <section>xx</section>
+        <section>xx</section>
+        <section>xx</section>
+        <section>xx</section>
+    </main>
     <!-- <header class="container">
             <nav>
                 <a href="#" title="RPrado Design Logo">
