--- a/index.html
+++ b/index.html
@@ -38,89 +38,55 @@
                 <div>↓</div>
             </a>
         </section>
-        <section>xx</section>
-        <section>xx</section>
-        <section>xx</section>
-        <section>xx</section>
-        <section>xx</section>
-        <section>xx</section>
-        <section>xx</section>
-    </main>
-    <!-- <header class="container">
-            <nav>
-                <a href="#" title="RPrado Design Logo">
-                    <img src="assets/logo.svg" alt="RPrado Design Logo">
-                </a>
-                <a href="#" title="Menu Icon">&#9776;</a>
-            </nav>
-            <div>
-                <span>RAFAEL PRADO</span>
-                <h1>
-                    <span>Construo experiências eficazes</span> para produtos complexos
-                </h1>
-                <p>Senior Product Designer na Vivo (Telefônica Brasil)</p>
-                <a href="#cases" title="Go to cases">↓</a>
-            </div>
-        </header>
-        <main class="container">
-            <section id="cases">
-                <h2>Portfólio</h2>
-                <article>
-                    <img src="assets/images/preview.png" alt="Preview case">
-                    <div>
-                        <span>2024 • Vivo (Telefônica Brasil)</span>
-                        <h3>App liderando crescimento da empresa</h3>
-                        <div>
-                            <p><span>⁕</span> Vitrine de produtos e serviços</p>
-                            <p><span>⁕</span> Login e cadastro multicanal</p>
-                            <p><span>⁕</span> Cruzamento de clientes B2C e B2B</p>
-                        </div>
-                        <a href="#" title="Button Case">Detalhes do produto</a>
+        <section id="cases" class="container">
+            <h2>Portfolio</h2>
+            <article>
+                <img src="assets/example.png" alt="Preview case">
+                <div>
+                    <span>2024 • Vivo (Telefônica Brasil)</span>
+                    <h3>App liderando crescimento da empresa</h3>
+                    <div class="desktop-only">
+                        <p><span>⁕</span> Vitrine de produtos e serviços</p>
+                        <p><span>⁕</span> Login e cadastro multicanal</p>
+                        <p><span>⁕</span> Cruzamento de clientes B2C e B2B</p>
                     </div>
-                </article>
-                <article>
-                    <img src="assets/images/preview.png" alt="Preview case">
-                    <div>
-                        <span>2022 • PicPay</span>
-                        <h3>Mantendo a segurança nas transações Pix</h3>
-                        <div>
-                            <p><span>⁕</span> Descomplicar produto regulatório</p>
-                            <p><span>⁕</span> Perfil de cliente que pensa em segurança</p>
-                            <p><span>⁕</span> Venda cruzada de seguros</p>
-                        </div>
-                        <a href="#" title="Button Case">Detalhes do produto</a>
+                    <a aria-label="Detalhes do produto" href="#" class="btn btn-secondary">Detalhes do produto</a>
+                </div>
+            </article>
+            <article>
+                <img src="assets/example.png" alt="Preview case">
+                <div>
+                    <span>2022 • PicPay</span>
+                    <h3>Mantendo a segurança nas transações Pix</h3>
+                    <div class="desktop-only">
+                        <p><span>⁕</span> Descomplicar produto regulatório</p>
+                        <p><span>⁕</span> Perfil de cliente que pensa em segurança</p>
+                        <p><span>⁕</span> Venda cruzada de seguros</p>
                     </div>
-                </article>
-                <article>
-                    <img src="assets/images/preview.png" alt="Preview case">
-                    <div>
-                        <span>2021 • Bradesco</span>
-                        <h3>Open Finance pra compartilhar dados e iniciar pagamentos</h3>
-                        <div>
-                            <p><span>⁕</span> Experiência regulatória fluída</p>
-                            <p><span>⁕</span> Fluxo estrutural para gerenciador de contas</p>
-                            <p><span>⁕</span> Unificação financeira</p>
-                        </div>
-                        <a href="#" title="Button Case">Detalhes do produto</a>
+                    <a aria-label="Detalhes do produto" href="#" class="btn btn-secondary">Detalhes do produto</a>
+                </div>
+            </article>
+            <article>
+                <img src="assets/example.png" alt="Preview case">
+                <div>
+                    <span>2021 • Bradesco</span>
+                    <h3>Open Finance: compartilhar dados e iniciar pagamentos</h3>
+                    <div class="desktop-only">
+                        <p><span>⁕</span> Experiência regulatória fluída</p>
+                        <p><span>⁕</span> Fluxo estrutural para gerenciador de contas</p>
+                        <p><span>⁕</span> Unificação financeira</p>
                     </div>
-                </article>
-                
-            </section>
-        </main>
+                    <a aria-label="Detalhes do produto" href="#" class="btn btn-secondary">Detalhes do produto</a>
+                </div>
+            </article>
+        </section>
+        <section id="about" class="container">
+            <h2>About</h2>
+        </section>
         <footer class="container">
-            <a href="#" title="RPrado Design Logo">
-                <svg viewBox="0 0 40 40">
-                    <path
-                    d="M0 19.591V4.14629C1.23088 2.60922 2.6362 1.21718 4.18605 -7.62939e-06V7.84225C7.84463 3.13722 13.5677 0.108897 20 0.108897C31.0457 0.108897 40 9.03899 40 20.0548C40 31.0126 31.1398 39.9066 20.1744 40V35.825C28.8279 35.7318 35.814 28.7069 35.814 20.0548C35.814 11.3446 28.7338 4.28358 20 4.28358C11.2662 4.28358 4.18605 11.3446 4.18605 20.0548V20.0548L0 20.0548C1.8443e-07 19.8998 0.00177343 19.7452 0.00530061 19.591H0ZM30.2326 20.0548C30.2326 25.6908 25.6513 30.2597 20 30.2597C17.738 30.2597 15.6475 29.5277 13.9535 28.2883V34.632C12.422 33.9787 11.0119 33.0848 9.76746 31.9959V20.0548V20.0548C9.76746 14.4188 14.3487 9.84988 20 9.84988C25.6513 9.84988 30.2326 14.4188 30.2326 20.0548ZM26.0465 20.0547C26.0465 16.7244 23.3394 14.0246 20 14.0246C16.6606 14.0246 13.9535 16.7244 13.9535 20.0547C13.9535 23.3851 16.6606 26.0849 20 26.0849C23.3394 26.0849 26.0465 23.3851 26.0465 20.0547Z" />
-                </svg>
-            </a>
-            <p>CONTACT</p>
-            <nav>
-                <a rel="noopener" href="https://www.linkedin.com/in/rpradosilva/" target="_blank"
-                title="LinkedIn">LinkedIn</a>
-                <a rel="noopener" href="https://github.com/rpradosilva" target="_blank" title="Github">Github</a>
-            </nav>
-        </footer> -->
+            xxx
+        </footer>
+    </main>
 </body>
 
 </html>
