refactor: add lottiefiles and trigger animations

--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
     <main class="wrapper">
         <section id="hero" class="container">
             <nav>
-                <a aria-label="Logo" href="#" class="btn">
+                <a aria-label="Home site" title="Home site" href="#" class="btn">
                     <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M0 23.5092V4.97555C1.47706 3.13107 3.16344 1.46063 5.02325 0V9.41071C9.41355 3.76467 16.2812 0.130685 24 0.130685C37.2548 0.130685 48 10.8468 48 24.0658C48 37.2151 37.3677 47.8879 24.2093 48V42.99C34.5934 42.8781 42.9767 34.4483 42.9767 24.0657C42.9767 13.6135 34.4806 5.1403 24 5.1403C13.5194 5.1403 5.02326 13.6135 5.02326 24.0657V24.0658H0C2.1352e-07 23.8797 0.00212811 23.6942 0.00636074 23.5092H0ZM36.2791 24.0657C36.2791 30.8289 30.7815 36.3116 24 36.3116C21.2856 36.3116 18.777 35.4332 16.7442 33.946V41.5584C14.9064 40.7745 13.2142 39.7017 11.7209 38.395V24.0658V24.0657C11.7209 17.3025 17.2185 11.8199 24 11.8199C30.7815 11.8199 36.2791 17.3025 36.2791 24.0657ZM31.2558 24.0657C31.2558 20.0692 28.0073 16.8295 24 16.8295C19.9927 16.8295 16.7442 20.0692 16.7442 24.0657C16.7442 28.0621 19.9927 31.3019 24 31.3019C28.0073 31.3019 31.2558 28.0621 31.2558 24.0657Z" />
                     </svg>
                 </a>
 
-                <a aria-label="Menu Icon" href="#" class="btn btn-icon mobile-only">&#9776;</a>
+                <a aria-label="Menu Icon" title="Menu Icon" href="#" class="btn btn-icon mobile-only">&#9776;</a>
                 <div class="desktop-only">
-                    <a aria-label="Sobre" href="#about" class="btn">Sobre</a>
-                    <a aria-label="LinkedIn" href="https://www.linkedin.com/in/rpradosilva/" class="btn">LinkedIn</a>
+                    <a aria-label="Sobre" title="Sobre" href="#about" class="btn">Sobre</a>
+                    <a aria-label="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/rpradosilva/"
+                        class="btn">LinkedIn</a>
                 </div>
             </nav>
             <div>
@@ -32,7 +33,9 @@
                     <span>Construo experiências eficazes</span>
                     <br>para produtos complexos
                 </h1>
-                <p>Senior Product Designer na Vivo (Telefônica Brasil)</p>
+                <p>Senior Product Designer na <a href="https://vivo.com.br/" target="_blank" aria-label="Site Vivo"
+                        title="Site Vivo">Vivo
+                        (Telefônica Brasil)</a></p>
             </div>
             <a href="#cases" class="btn btn-icon arrow">
                 <div>↓</div>
@@ -41,7 +44,9 @@
         <section id="cases" class="container">
             <h2>Portfolio</h2>
             <article>
-                <img src="assets/example.png" alt="Preview case">
+                <!-- <img src="assets/example.png" alt="Preview case"> -->
+                <dotlottie-player src="https://lottie.host/4295fc29-e8c2-46d8-bae5-0d6e34cd0f18/mvt5WFm1OJ.lottie"
+                    background="transparent" speed="1" autoplay loop></dotlottie-player>
                 <div>
                     <span>2024 • Vivo (Telefônica Brasil)</span>
                     <h3>App liderando crescimento da empresa</h3>
@@ -50,11 +55,14 @@
                         <p><span>⁕</span> Login e cadastro multicanal</p>
                         <p><span>⁕</span> Cruzamento de clientes B2C e B2B</p>
                     </div>
-                    <a aria-label="Detalhes do produto" href="#" class="btn btn-secondary">Detalhes do produto</a>
+                    <a aria-label="Detalhes do produto" title="Detalhes do produto" href="#"
+                        class="btn btn-secondary">Detalhes do produto</a>
                 </div>
             </article>
             <article>
-                <img src="assets/example.png" alt="Preview case">
+                <!-- <img src="assets/example.png" alt="Preview case"> -->
+                <dotlottie-player src="https://lottie.host/65098d4c-031b-4c0d-82cd-6639ba6821a1/Aa3SxhXCvG.lottie"
+                    background="transparent" speed="1" autoplay loop></dotlottie-player>
                 <div>
                     <span>2022 • PicPay</span>
                     <h3>Mantendo a segurança nas transações Pix</h3>
@@ -63,11 +71,14 @@
                         <p><span>⁕</span> Perfil de cliente que pensa em segurança</p>
                         <p><span>⁕</span> Venda cruzada de seguros</p>
                     </div>
-                    <a aria-label="Detalhes do produto" href="#" class="btn btn-secondary">Detalhes do produto</a>
+                    <a aria-label="Detalhes do produto" title="Detalhes do produto" href="#"
+                        class="btn btn-secondary">Detalhes do produto</a>
                 </div>
             </article>
             <article>
-                <img src="assets/example.png" alt="Preview case">
+                <!-- <img src="assets/example.png" alt="Preview case"> -->
+                <dotlottie-player src="https://lottie.host/1de76163-d02b-4403-84f4-e30ee45bda12/t3JgMh3KD4.lottie"
+                    background="transparent" speed="1" autoplay loop></dotlottie-player>
                 <div>
                     <span>2021 • Bradesco</span>
                     <h3>Open Finance: compartilhar dados e iniciar pagamentos</h3>
@@ -76,7 +87,8 @@
                         <p><span>⁕</span> Fluxo estrutural para gerenciador de contas</p>
                         <p><span>⁕</span> Unificação financeira</p>
                     </div>
-                    <a aria-label="Detalhes do produto" href="#" class="btn btn-secondary">Detalhes do produto</a>
+                    <a aria-label="Detalhes do produto" title="Detalhes do produto" href="#"
+                        class="btn btn-secondary">Detalhes do produto</a>
                 </div>
             </article>
         </section>
@@ -87,6 +99,8 @@
             xxx
         </footer>
     </main>
+    <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
+    <script src="scripts/index.js"></script>
 </body>
 
 </html>
