refactor: add photos section

--- a/index.html
+++ b/index.html
@@ -194,6 +194,11 @@
                 </div>
             </article>
         </section>
+        <section id="photos">
+            <img src="assets/dd-vivo-sp.webp" alt="Design Day Vivo">
+            <img src="assets/foto-dc-sp.webp" alt="Encontro Design Circuit SP">
+            <img src="assets/picpay-squad-sp.webp" alt="Squad COPAG Picpay">
+        </section>
         <footer>
             <div>
                 <a aria-label="Home site" title="Home site" href="#" class="btn">
