refactor: homepage adjusts

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
                     class="btn desktop-only">Curriculum</a>
             </nav>
             <div>
-                <span>RAFAEL PRADO</span>
+                <span>
+                    <a aria-label="LinkedIn" title="LinkedIn" target="_blank"
+                        href="https://www.linkedin.com/in/rpradosilva/" class="btn">RAFAEL
+                        PRADO</a>
+                </span>
                 <h1>
                     <span>Construo experiências eficazes</span>
                     <br>para produtos complexos
