--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description"
+        content="Rafael Prado - Senior Product Designer na Vivo. 11+ anos construindo experiências eficazes para produtos complexos em fintech e telecom.">
+    <meta name="keywords" content="product designer, ux designer, ui designer, rafael prado, portfolio design">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Rafael Prado - Product Designer">
+    <meta property="og:description"
+        content="Senior Product Designer construindo experiências eficazes para produtos complexos">
+    <meta property="og:image" content="#">
+    <meta property="og:url" content="https://rprado.design">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="#">
+    <meta name="twitter:title" content="Rafael Prado - Product Designer">
+    <meta name="twitter:description" content="Senior Product Designer na Vivo">
+
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="preload" href="styles/index.css" as="style" onload="this.rel='stylesheet'">
     <title>Rafael Prado - Product Designer</title>
+
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Rafael Prado",
+    "jobTitle": "Senior Product Designer",
+    "worksFor": "Vivo (Telefônica Brasil)",
+    "url": "https://rprado.design",
+    "sameAs": ["https://linkedin.com/in/rpradosilva"]
+    }
+    </script>
 </head>
 
 <body>
@@ -21,19 +50,18 @@
                                 d="M0 23.5092V4.97555C1.47706 3.13107 3.16344 1.46063 5.02325 0V9.41071C9.41355 3.76467 16.2812 0.130685 24 0.130685C37.2548 0.130685 48 10.8468 48 24.0658C48 37.2151 37.3677 47.8879 24.2093 48V42.99C34.5934 42.8781 42.9767 34.4483 42.9767 24.0657C42.9767 13.6135 34.4806 5.1403 24 5.1403C13.5194 5.1403 5.02326 13.6135 5.02326 24.0657V24.0658H0C2.1352e-07 23.8797 0.00212811 23.6942 0.00636074 23.5092H0ZM36.2791 24.0657C36.2791 30.8289 30.7815 36.3116 24 36.3116C21.2856 36.3116 18.777 35.4332 16.7442 33.946V41.5584C14.9064 40.7745 13.2142 39.7017 11.7209 38.395V24.0658V24.0657C11.7209 17.3025 17.2185 11.8199 24 11.8199C30.7815 11.8199 36.2791 17.3025 36.2791 24.0657ZM31.2558 24.0657C31.2558 20.0692 28.0073 16.8295 24 16.8295C19.9927 16.8295 16.7442 20.0692 16.7442 24.0657C16.7442 28.0621 19.9927 31.3019 24 31.3019C28.0073 31.3019 31.2558 28.0621 31.2558 24.0657Z" />
                         </svg>
                     </a>
-                    <a aria-label="Menu Icon" title="Menu Icon" href="javascript:void(0);" onclick="toggleMenu()"
+                    <a aria-label="Menu" aria-expanded="false" title="Menu Icon"
                         class="btn btn-icon mobile-only">&#9776;</a>
 
                 </div>
-                <a aria-label="Sobre" title="Sobre" href="#about" class="btn desktop-only"
-                    onclick="toggleMenu()">Sobre</a>
-                <a aria-label="Curriculum" title="Curriculum" target="_blank"
+                <a aria-label="Sobre" title="Sobre" href="#about" class="btn desktop-only">Sobre</a>
+                <a aria-label="Curriculum" title="Curriculum" target="_blank" rel="noopener"
                     href="https://drive.google.com/file/d/11jCQ_Lw1MqRJBhsqQTGxPeKrGGmF5CoJ/view?usp=sharing"
-                    onclick="toggleMenu()" class="btn desktop-only">Curriculum</a>
+                    class="btn desktop-only">Curriculum</a>
             </nav>
             <div>
                 <span>
-                    <a aria-label="LinkedIn" title="LinkedIn" target="_blank"
+                    <a aria-label="LinkedIn" title="LinkedIn" target="_blank" rel="noopener"
                         href="https://www.linkedin.com/in/rpradosilva/" class="btn">RAFAEL
                         PRADO</a>
                 </span>
@@ -41,12 +69,13 @@
                     <span>Construo experiências eficazes</span>
                     <br>para produtos complexos
                 </h1>
-                <p>Senior Product Designer na <a href="https://vivo.com.br/" target="_blank" aria-label="Site Vivo"
-                        title="Site Vivo">Vivo
+                <p>Senior Product Designer na <a aria-label="Site Vivo" title="Site Vivo" href="https://vivo.com.br/"
+                        target="_blank" rel="noopener">Vivo
                         (Telefônica Brasil)</a></p>
             </div>
             <div>
-                <a href="#cases" class="btn btn-icon">↓</a>
+                <a aria-label="Pular para conteúdo principal" title="Pular para conteúdo principal" href="#cases"
+                    class="btn btn-icon">↓</a>
             </div>
 
         </section>
@@ -54,7 +83,7 @@
             <h2>Portfolio</h2>
             <article>
                 <dotlottie-player src="https://lottie.host/c41506f8-6edb-416f-bb3e-aaf18848ee5a/vy9tHe4Nv5.lottie"
-                    background="transparent" speed="1" autoplay loop></dotlottie-player>
+                    background="transparent" speed="1" autoplay loop loading="lazy"></dotlottie-player>
                 <div>
                     <span>2024 • Vivo (Telefônica Brasil)</span>
                     <h3>App liderando crescimento da empresa</h3>
@@ -69,7 +98,7 @@
             </article>
             <article>
                 <dotlottie-player src="https://lottie.host/c41506f8-6edb-416f-bb3e-aaf18848ee5a/vy9tHe4Nv5.lottie"
-                    background="transparent" speed="1" autoplay loop></dotlottie-player>
+                    background="transparent" speed="1" autoplay loop loading="lazy"></dotlottie-player>
                 <div>
                     <span>2022 • PicPay</span>
                     <h3>Mantendo a segurança nas transações Pix</h3>
@@ -84,7 +113,7 @@
             </article>
             <article>
                 <dotlottie-player src="https://lottie.host/c41506f8-6edb-416f-bb3e-aaf18848ee5a/vy9tHe4Nv5.lottie"
-                    background="transparent" speed="1" autoplay loop></dotlottie-player>
+                    background="transparent" speed="1" autoplay loop loading="lazy"></dotlottie-player>
                 <div>
                     <span>2021 • Bradesco</span>
                     <h3>Dados e pagamentos no Open Finance</h3>
@@ -101,7 +130,7 @@
         <section id="about">
             <h3>Sobre</h3>
             <article>
-                <img src="assets/profile.webp" alt="Rafael Prado Foto">
+                <img src="assets/profile.webp" alt="Rafael Prado Foto" loading="lazy">
                 <div>
                     <h2>Rafael Prado</h2>
                     <div>
@@ -126,10 +155,10 @@
                         transformando
                         conceitos em produtos inovadores e eficazes.</p>
                     <div>
-                        <a aria-label="Curriculum" title="Curriculum" target="_blank"
+                        <a aria-label="Curriculum" title="Curriculum" target="_blank" rel="noopener"
                             href="https://drive.google.com/file/d/11jCQ_Lw1MqRJBhsqQTGxPeKrGGmF5CoJ/view?usp=sharing"
                             class="btn btn-primary">Curriculum</a>
-                        <a aria-label="LinkedIn" title="LinkedIn" target="_blank"
+                        <a aria-label="LinkedIn" title="LinkedIn" target="_blank" rel="noopener"
                             href="https://www.linkedin.com/in/rpradosilva/" class="btn btn-secondary">LinkedIn</a>
                     </div>
                 </div>
@@ -143,8 +172,8 @@
                             <span>Ago 2023 — Atual</span>
                             <p>
                                 <span>
-                                    <a href="https://vivo.com.br/" target="_blank" aria-label="Site Vivo"
-                                        title="Site Vivo">Sr. Product Designer</a>
+                                    <a aria-label="Site Vivo" title="Site Vivo" href="https://vivo.com.br/"
+                                        target="_blank" rel="noopener">Sr. Product Designer</a>
                                 </span>
                                 <span>Vivo (Telefônica Brasil)</span>
                             </p>
@@ -153,8 +182,8 @@
                             <span>Jan 2022 — Abr 2023</span>
                             <p>
                                 <span>
-                                    <a href="https://picpay.com.br/" target="_blank" aria-label="Site PicPay"
-                                        title="Site PicPay">Product Designer</a>
+                                    <a aria-label="Site PicPay" title="Site PicPay" href="https://picpay.com.br/"
+                                        target="_blank" rel="noopener">Product Designer</a>
                                 </span>
                                 <span>PicPay</span>
                             </p>
@@ -163,8 +192,8 @@
                             <span>Out 2020 — Nov 2021</span>
                             <p>
                                 <span>
-                                    <a href="https://banco.bradesco/" target="_blank" aria-label="Site Bradesco"
-                                        title="Site Bradesco">UX/UI Designer</a>
+                                    <a aria-label="Site Bradesco" title="Site Bradesco" href="https://banco.bradesco/"
+                                        target="_blank" rel="noopener">UX/UI Designer</a>
                                 </span>
                                 <span>Bradesco</span>
                             </p>
@@ -173,8 +202,9 @@
                             <span>Out 2020 — Out 2020</span>
                             <p>
                                 <span>
-                                    <a href="https://mccannhealth.com.br/" target="_blank"
-                                        aria-label="Site McCann Health" title="Site McCann Health">UX/UI Designer</a>
+                                    <a aria-label="Site McCann Health" title="Site McCann Health"
+                                        href="https://mccannhealth.com.br/" target="_blank" rel="noopener">UX/UI
+                                        Designer</a>
                                 </span>
                                 <span>McCann Health</span>
                             </p>
@@ -183,8 +213,8 @@
                             <span>Nov 2017 — Out 2020</span>
                             <p>
                                 <span>
-                                    <a href="https://mandarin.com.br/" target="_blank"
-                                        aria-label="Site Agência Mandarin" title="Site Agência Mandarin">Designer</a>
+                                    <a aria-label="Site Agência Mandarin" title="Site Agência Mandarin"
+                                        href="https://mandarin.com.br/" target="_blank" rel="noopener">Designer</a>
                                 </span>
                                 <span>Agência Mandarin</span>
                             </p>
@@ -193,8 +223,8 @@
                             <span>Jun 2013 — Nov 2017</span>
                             <p>
                                 <span>
-                                    <a href="https://www.bravemd.com.br/" target="_blank"
-                                        aria-label="Site Brave Response Agency" title="Site Brave Response Agency">Jr.
+                                    <a aria-label="Site Brave Response Agency" title="Site Brave Response Agency"
+                                        href="https://www.bravemd.com.br/" target="_blank" rel="noopener">Jr.
                                         Designer</a>
                                 </span>
                                 <span>Agência Mandarin</span>
@@ -206,9 +236,9 @@
         </section>
         <section id="photos">
             <h3>Fotos</h3>
-            <img src="assets/dd-vivo-sp.webp" alt="Design Day Vivo">
-            <img src="assets/foto-dc-sp.webp" alt="Encontro Design Circuit SP">
-            <img src="assets/picpay-squad-sp.webp" alt="Squad COPAG Picpay">
+            <img src="assets/dd-vivo-sp.webp" alt="Design Day Vivo" loading="lazy">
+            <img src="assets/foto-dc-sp.webp" alt="Encontro Design Circuit SP" loading="lazy">
+            <img src="assets/picpay-squad-sp.webp" alt="Squad COPAG Picpay" loading="lazy">
         </section>
         <footer>
             <div>
@@ -227,9 +257,9 @@
             </div>
             <nav>
                 <a aria-label="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/rpradosilva/"
-                    target="_blank" class="btn">LinkedIn</a>
+                    target="_blank" rel="noopener" class="btn">LinkedIn</a>
                 <a aria-label="Github" title="Github" href="https://www.github.com/rpradosilva/" target="_blank"
-                    class="btn">Github</a>
+                    rel="noopener" class="btn">Github</a>
             </nav>
         </footer>
     </main>
