refactor: update image links

--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description"
-        content="Rafael Prado - Senior Product Designer na Vivo. 11+ anos construindo experiências eficazes para produtos complexos em fintech e telecom.">
+        content="Rafael Prado - Senior Product Designer na Vivo. Construo experiências eficazes para produtos complexos.">
     <meta name="keywords" content="product designer, ux designer, ui designer, rafael prado, portfolio design">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Rafael Prado - Product Designer">
-    <meta property="og:description"
-        content="Senior Product Designer construindo experiências eficazes para produtos complexos">
-    <meta property="og:image" content="#">
+    <meta property="og:title" content="Rafael Prado - Senior Product Designer">
+    <meta property="og:description" content="Construo experiências eficazes para produtos complexos">
+    <meta property="og:image"
+        content="https://raw.githubusercontent.com/rpradosilva/portfolio/refs/heads/main/assets/ogimage.jpg">
     <meta property="og:url" content="https://rprado.design">
     <meta property="og:type" content="website">
 
-    <meta name="twitter:card" content="#">
-    <meta name="twitter:title" content="Rafael Prado - Product Designer">
-    <meta name="twitter:description" content="Senior Product Designer na Vivo">
+    <meta name="twitter:card"
+        content="https://raw.githubusercontent.com/rpradosilva/portfolio/refs/heads/main/assets/twittercard.jpg">
+    <meta name="twitter:title" content="Rafael Prado - Senior Product Designer">
+    <meta name="twitter:description" content="Construo experiências eficazes para produtos complexos">
 
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="preload" href="styles/index.css" as="style" onload="this.rel='stylesheet'">
