--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="twitter:description" content="Construo experiências eficazes para produtos complexos">
 
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <link rel="preload" href="styles/index.css" as="style" onload="this.rel='stylesheet'">
+    <link rel="stylesheet" href="styles/index.css">
     <title>Rafael Prado - Product Designer</title>
 
     <script type="application/ld+json">
