refactor: prepare for static cms - jekyll

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <meta name="twitter:title" content="Rafael Prado - Senior Product Designer">
     <meta name="twitter:description" content="Construo experiências eficazes para produtos complexos">
 
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/styles/index.css">
     <title>Rafael Prado - Product Designer</title>
 
     <script type="application/ld+json">
@@ -131,7 +131,7 @@
         <section id="about">
             <h3>Sobre</h3>
             <article>
-                <img src="assets/profile.webp" alt="Rafael Prado Foto" loading="lazy">
+                <img src="assets/images/profile.webp" alt="Rafael Prado Foto" loading="lazy">
                 <div>
                     <h2>Rafael Prado</h2>
                     <div>
@@ -237,9 +237,9 @@
         </section>
         <section id="photos">
             <h3>Fotos</h3>
-            <img src="assets/dd-vivo-sp.webp" alt="Design Day Vivo" loading="lazy">
-            <img src="assets/foto-dc-sp.webp" alt="Encontro Design Circuit SP" loading="lazy">
-            <img src="assets/picpay-squad-sp.webp" alt="Squad COPAG Picpay" loading="lazy">
+            <img src="assets/images/dd-vivo-sp.webp" alt="Design Day Vivo" loading="lazy">
+            <img src="assets/images/foto-dc-sp.webp" alt="Encontro Design Circuit SP" loading="lazy">
+            <img src="assets/images/picpay-squad-sp.webp" alt="Squad COPAG Picpay" loading="lazy">
         </section>
         <footer>
             <div>
@@ -266,7 +266,7 @@
     </main>
 
     <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
-    <script src="scripts/index.js"></script>
+    <script src="assets/scripts/index.js"></script>
 </body>
 
 </html>
