adjust: acessibility items

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <dotlottie-player src="https://lottie.host/c41506f8-6edb-416f-bb3e-aaf18848ee5a/vy9tHe4Nv5.lottie"
                     background="transparent" speed="1" autoplay loop loading="lazy"></dotlottie-player>
                 <div>
-                    <span>2024 • Vivo (Telefônica Brasil)</span>
+                    <span>2024 - Vivo (Telefônica Brasil)</span>
                     <h3>App liderando crescimento da empresa</h3>
                     <div class="desktop-only">
                         <p><span>⁕</span> Vitrine de produtos e serviços</p>
@@ -101,7 +101,7 @@
                 <dotlottie-player src="https://lottie.host/c41506f8-6edb-416f-bb3e-aaf18848ee5a/vy9tHe4Nv5.lottie"
                     background="transparent" speed="1" autoplay loop loading="lazy"></dotlottie-player>
                 <div>
-                    <span>2022 • PicPay</span>
+                    <span>2022 - PicPay</span>
                     <h3>Mantendo a segurança nas transações Pix</h3>
                     <div class="desktop-only">
                         <p><span>⁕</span> Descomplicar produto regulatório</p>
@@ -116,7 +116,7 @@
                 <dotlottie-player src="https://lottie.host/c41506f8-6edb-416f-bb3e-aaf18848ee5a/vy9tHe4Nv5.lottie"
                     background="transparent" speed="1" autoplay loop loading="lazy"></dotlottie-player>
                 <div>
-                    <span>2021 • Bradesco</span>
+                    <span>2021 - Bradesco</span>
                     <h3>Dados e pagamentos no Open Finance</h3>
                     <div class="desktop-only">
                         <p><span>⁕</span> Experiência regulatória fluída</p>
