refactor: remove social images

--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Rafael Prado - Senior Product Designer">
     <meta property="og:description" content="Construo experiências eficazes para produtos complexos">
-    <meta property="og:image"
-        content="https://raw.githubusercontent.com/rpradosilva/portfolio/refs/heads/main/assets/ogimage.jpg">
+    <meta property="og:image" content="#">
     <meta property="og:url" content="https://rprado.design">
     <meta property="og:type" content="website">
 
-    <meta name="twitter:card"
-        content="https://raw.githubusercontent.com/rpradosilva/portfolio/refs/heads/main/assets/twittercard.jpg">
+    <meta name="twitter:card" content="">
     <meta name="twitter:title" content="Rafael Prado - Senior Product Designer">
     <meta name="twitter:description" content="Construo experiências eficazes para produtos complexos">
 
