refactor: complete homepage

--- a/index.html
+++ b/index.html
@@ -76,23 +76,7 @@
         <section id="cases">
             <h2>Portfolio</h2>
             <article>
-                <dotlottie-player src="https://lottie.host/c41506f8-6edb-416f-bb3e-aaf18848ee5a/vy9tHe4Nv5.lottie"
-                    background="transparent" speed="1" autoplay loop loading="lazy"></dotlottie-player>
-                <div>
-                    <span>2024 - Vivo (Telefônica Brasil)</span>
-                    <h3>App liderando crescimento da empresa</h3>
-                    <div class="desktop-only">
-                        <p><span>⁕</span> Vitrine de produtos e serviços</p>
-                        <p><span>⁕</span> Login e cadastro multicanal</p>
-                        <p><span>⁕</span> Cruzamento de clientes B2C e B2B</p>
-                    </div>
-                    <a aria-label="Detalhes do produto" title="Detalhes do produto" href="#"
-                        class="btn btn-secondary">Detalhes do produto</a>
-                </div>
-            </article>
-            <article>
-                <dotlottie-player src="https://cdn.lottielab.com/l/CcRiD3Vj1VZnbV.json" background="#000d14" speed="1"
-                    autoplay loop loading="lazy"></dotlottie-player>
+                <img src="assets/images/case-picpay.webp" alt="Case picpay" loading="lazy">
                 <div>
                     <span>2022 - PicPay</span>
                     <h3>Mantendo a segurança nas transações Pix</h3>
@@ -106,8 +90,8 @@
                 </div>
             </article>
             <article>
-                <dotlottie-player src="https://lottie.host/c41506f8-6edb-416f-bb3e-aaf18848ee5a/vy9tHe4Nv5.lottie"
-                    background="transparent" speed="1" autoplay loop loading="lazy"></dotlottie-player>
+                <img src="assets/images/case-bradesco.webp" alt="Case bradesco" loading="lazy">
+
                 <div>
                     <span>2021 - Bradesco</span>
                     <h3>Dados e pagamentos no Open Finance</h3>
