refactor: adjust grid width

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <img src="assets/images/case-picpay.webp" alt="Case picpay" loading="lazy">
                 <div>
                     <span>2022 - PicPay</span>
-                    <h3>Mantendo a segurança nas transações Pix</h3>
+                    <h3>Limites para transações Pix</h3>
                     <div class="desktop-only">
                         <p><span>⁕</span> Descomplicar produto regulatório</p>
                         <p><span>⁕</span> Perfil de cliente que pensa em segurança</p>
@@ -94,7 +94,7 @@
 
                 <div>
                     <span>2021 - Bradesco</span>
-                    <h3>Dados e pagamentos no Open Finance</h3>
+                    <h3>Open Finance: dados e pagamentos</h3>
                     <div class="desktop-only">
                         <p><span>⁕</span> Experiência regulatória fluída</p>
                         <p><span>⁕</span> Fluxo estrutural para gerenciador de contas</p>
