refactor: remove job timeline

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     </div>
                 </div>
             </article>
-            <article>
+            <!-- <article>
                 <div class="desktop-only"></div>
                 <div>
                     <h3>Experiências</h3>
@@ -210,7 +210,7 @@
                         </div>
                     </div>
                 </div>
-            </article>
+            </article> -->
         </section>
         <section id="photos">
             <h3>Fotos</h3>
